# finace-radar

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/db/: init.sql
backend/src/: db.rs  finance.rs  gmail.rs  main.rs  models.rs  utils.rs
backend/src/ai/: gemini.rs  groq.rs  mod.rs  ollama.rs  parser.rs  prompt.rs
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  config.js  main.jsx  styles.css
frontend/src/components/: AccountBars.jsx  Charts.jsx  InboxList.jsx  LoginPage.jsx  Metric.jsx  Panel.jsx  ProfileSettings.jsx  SubscriptionGrid.jsx  TransactionTable.jsx  UserMenu.jsx
frontend/src/services/: api.js  googleAuth.js  profileStorage.js
frontend/src/utils/: dashboard.js  dates.js  formatters.js  i18n.js
